add duckaccess duckdb extension
